--- a/styles.css
+++ b/styles.css
@@ -61,15 +61,25 @@ main {
     padding: 0;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 #links li {
-    margin: 0 15px;
+    margin: 10px;
 }
 
 #links a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #8c1c13;
+    color: #e6d7c3;
     text-decoration: none;
-    color: #8c1c13; /* Matching the header color */
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+#links a:hover {
+    background-color: #6e160f;
 }
 
 footer {
